corrected location info and helper list

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: workshop
 root: .
 venue: The Jackson Laboratory for Genomic Medicine
-address: Rooms 1405 & 1410 10 Discovery Drive Farmington, Connecticut
+address: 10 Discovery Drive, Farmington, Connecticut
 country: United-States
 language: en
 latlng: 41.732317,-72.793404
@@ -11,7 +11,7 @@ humantime: 9:00 am - 4:00 pm
 startdate: 2015-10-26
 enddate: 2015-10-27
 instructor: ["Sheldon McKay", "Sue McClatchy", "Narayanan Raghupathy"]
-helper: ["TBA", "TBA", "TBA"]
+helper: ["TBA"]
 contact: susan.mcclatchy@jax.org
 etherpad: https://etherpad.mozilla.org/VB2zthdOyy
 eventbrite:
