added eventbrite codes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ instructor: ["Sheldon McKay", "Sue McClatchy", "Narayanan Raghupathy"]
 helper: ["TBA"]
 contact: susan.mcclatchy@jax.org
 etherpad: https://etherpad.mozilla.org/VB2zthdOyy
-eventbrite:
+eventbrite: 18694374377
 ---
 <!--
   HEADER
