--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ humantime: 9:00 am - 4:00 pm
 startdate: 2015-10-26
 enddate: 2015-10-27
 instructor: ["Sheldon McKay", "Sue McClatchy", "Narayanan Raghupathy"]
-helper: ["TBA"]
+helper: ["Joshy George", "Asli Uyar"]
 contact: susan.mcclatchy@jax.org
-etherpad: https://etherpad.mozilla.org/VB2zthdOyy
+etherpad: https://public.etherpad-mozilla.org/p/2015-10-26-jackson
 eventbrite: 18694374377
 ---
 <!--
@@ -146,7 +146,7 @@ another Software Carpentry session becomes available.</strong>
       <tr> <td>09:30</td>  <td>Analyzing patient data</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee/tea break</td> </tr>
       <tr> <td>10:45</td>  <td>Creating functions</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
+      <tr> <td>12:00</td>  <td>Lunch on your own</td> </tr>
       <tr> <td>13:00</td>  <td>Analyzing multiple data sets</td> </tr>
       <tr> <td>14:30</td>  <td>Coffee/tea break</td> </tr>
       <tr> <td>14:45</td>  <td>Making choices</td> </tr>
@@ -160,7 +160,7 @@ another Software Carpentry session becomes available.</strong>
       <tr> <td>09:00</td>  <td>Best practices for using R and designing programs</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee/tea break</td></tr>
       <tr> <td>10:45</td>  <td>Dynamic reports with knitr</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td></tr>
+      <tr> <td>12:00</td>  <td>Lunch on your own</td></tr>
       <tr> <td>13:00</td>  <td>Making packages in R</td> </tr>
       <tr> <td>14:30</td>  <td>Coffee/tea break</td> </tr>
       <tr> <td>14:45</td>  <td>Publication quality graphics with R</td> </tr>
