added Zeeshan and removed command line from syllabus

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humantime: 9:00 am - 4:00 pm
 startdate: 2015-10-26
 enddate: 2015-10-27
 instructor: ["Sheldon McKay", "Sue McClatchy", "Narayanan Raghupathy"]
-helper: ["Joshy George", "Asli Uyar"]
+helper: ["Joshy George", "Asli Uyar", "Zeeshan Ahmed"]
 contact: susan.mcclatchy@jax.org
 etherpad: https://public.etherpad-mozilla.org/p/2015-10-26-jackson
 eventbrite: 18694374377
@@ -222,7 +222,6 @@ another Software Carpentry session becomes available.</strong>
       <li>Reading and plotting data</li>
       <li>Creating and using functions</li>
       <li>Loops and conditionals</li>
-      <li>Using R from the command line</li>
       <li><a href="{{site.swc_lessons}}/ref/06-R.html">Reference...</a></li>
     </ul>
   </div>
