--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humantime: 9:00 am - 4:00 pm
 startdate: 2015-10-26
 enddate: 2015-10-27
 instructor: ["Sheldon McKay", "Sue McClatchy", "Narayanan Raghupathy"]
-helper: ["Joshy George", "Asli Uyar", "Zeeshan Ahmed"]
+helper: ["Joshy George", "Asli Uyar", "Zeeshan Ahmed", "Francesca Menghi"]
 contact: susan.mcclatchy@jax.org
 etherpad: https://public.etherpad-mozilla.org/p/2015-10-26-jackson
 eventbrite: 18694374377
